Validate scroll distance factor
Co-authored-by: Marco Geweke <marco.geweke@otto.de>